# knowledge-gun

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: test.yml
examples/: example_studio_bundle.md
examples/demo_graph/: generate.py  graph.json
examples/demo_graph/intros/: projects.intro.md  studio.intro.md  team.intro.md
examples/demo_graph/roots/: industry.roots.json
src/knowledge_gun/: __init__.py  cli.py
src/knowledge_gun/demo_graph/: generate.py
src/knowledge_gun/demo_graph/intros/: industry.intro.md
src/knowledge_gun/demo_graph/roots/: projects.roots.json  studio.roots.json  team.roots.json
tests/: test_bundle_generator.py  test_cli_no_graph.py
