[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "knowledge-gun"
version = "0.1.0"
description = "Generate paste-ready chatbot context bundles from a curated knowledge graph. Topic-scoped neighbourhood walker + hand-written intros."
readme = "README.md"
license = "MIT"
authors = [{name = "Addo-Kwabena Addo", email = "akaddo97@gmail.com"}]
requires-python = ">=3.11"
keywords = ["knowledge-graph", "llm", "chatbot", "context", "rag"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
knowledge-gun = "knowledge_gun.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/knowledge_gun"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
